nginx/ingress-nginx/templates/reference_grant.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-argocd-to-infra
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: nginx
  to:
    - group: ""
      kind: Service
      name: argocd-server
