nginx/ingress-nginx/templates/externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-external
  namespace: nginx
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: nginx
spec:
  type: ExternalName
  externalName: minio-service.minio.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
