nginx/ingress-nginx/templates/ingress_resources.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /argocd(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /minio/(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-service
                port:
                  number: 80
